syntax = "proto3";

package auth;

option go_package = "github.com/username/go-microservices-ecommerce/proto/auth";

// AuthService provides authentication validation for other services
service AuthService {
  // ValidateToken checks if a JWT token is valid and returns user info
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
  
  // GetUserById returns user information by ID
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  uint64 user_id = 2;
  string email = 3;
  string role = 4;
  string error_message = 5;
}

message GetUserByIdRequest {
  uint64 user_id = 1;
}

message GetUserByIdResponse {
  bool found = 1;
  uint64 user_id = 2;
  string email = 3;
  string name = 4;
  string role = 5;
}
